// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IDEConsole /> renders correctly with logs 1`] = `
<styled.div>
  <p>
    test logs
  </p>
</styled.div>
`;

exports[`<IDEConsole /> renders correctly without logs 1`] = `
<styled.div>
  <p />
</styled.div>
`;
